--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       </div>
     </div>
 
-    <div class="dropdownmenu">
-        <li><a href="home">Home</a></li>
+    <div class="dropdown_menu open">
+          <li><a href="home">Home</a></li>
           <li><a href="about">About</a></li>
           <li><a href="services">Services</a></li>
           <li><a href="contact">Contact</a></li>
-          <a href="" class="action_btn">Get Started</a>
+          <li><a href="" class="action_btn">Get Started</a></li>
     </div>
 
 
